gcc/testsuite/rust/rustc/ui/suggestions/no-extern-crate-in-type.rs
// aux-build:foo.rs

extern crate foo;

type Output = Option<Foo>; // { dg-error ".E0412." "" { target *-*-* } }

fn main() {}

